project(vtkDeformable)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)


FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VTK_LIBRARIES})

